# mnem

./: .gitattributes  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.es.md  README.md  README.zh-CN.md
.cargo/: config.toml
.github/scripts/: check_translations.py
.github/workflows/: release.yml  translation-sync.yml
benchmarks/: README.md
benchmarks/harness/: compose.yml
benchmarks/results/: convomem.md  locomo.md  longmemeval.md  membench.md
crates/mnem-ann/: Cargo.toml
crates/mnem-backend-redb/: Cargo.toml
crates/mnem-bench/: Cargo.toml
crates/mnem-cli/: Cargo.toml  README.md
crates/mnem-core-testutils/: Cargo.toml
crates/mnem-embed-providers/: Cargo.toml
crates/mnem-extract/: Cargo.toml
crates/mnem-graphrag/: Cargo.toml
crates/mnem-http/: Cargo.toml  README.md
crates/mnem-ingest/: Cargo.toml
crates/mnem-llm-providers/: Cargo.toml
crates/mnem-mcp/: Cargo.toml  README.md
crates/mnem-ner-providers/: Cargo.toml  README.md
crates/mnem-ner-providers/src/: config.rs  error.rs  lib.rs  null.rs  provider.rs  rule.rs
crates/mnem-py/: Cargo.toml  README.md  pyproject.toml
crates/mnem-rerank-providers/: Cargo.toml
crates/mnem-sparse-providers/: Cargo.toml
crates/mnem-transport/: Cargo.toml  README.md
docs/: README.md  ROADMAP.md  SPEC.md  V0.2.0_MERGE_TRACKING.md  book.toml
docs/features/: benchmarks.md  content-addressing.md  deterministic-ingest.md  hybrid-retrieval.md  integrations.md  providers.md  single-binary.md  skills-graph.md  token-transparency.md  wasm-edge.md  (+1 more)
fuzz/: README.md
npm/: README.md  package.json
(+123 files in other folders)
